--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
-BOT_API=1111111111:AAAAAAAAAABBBBBBBBBBBBBBBBBBBBBBBBB
-URL=https://deneyselbot.herokuapp.com/
+BOT_API=1905734901:AAFfUINRVHifw2rzrjdNXEK0Z0rxCzwfZJA
+URL=https://ds-destek.herokuapp.com/
 PORT=80
